[tool.poetry]
name = "PrjForInfCreditVilFW"
version = "0.1.2"
description = ""
authors = ["Fan Wang <wangfanbsg75@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-frontmatter = "^0.5.0"
pyyaml = "^5.3.1"
numpy = "^1.18.5"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
cython = "^0.29.20"
seaborn = "^0.10.1"
statsmodels = "^0.11.1"
numba = "^0.50.1"
sklearn = "^0.0"
boto3 = "^1.15.18"
urllib3 = "^1.25.10"
cryptography = "^3.0.0"
interpolation = "^2.0.0"
pyfan = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
